--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header{
     display: grid;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    top: 0;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
@@ -32,38 +32,22 @@ header{
     grid-gap: 20px;
 }
 
-
-.two-boxes-box{
-    grid-template-columns: repeat(2, 1fr);
-    height: 300px;
-    margin-top: 100px;
+.two-boxes{
+  grid-template-columns: repeat(2, 1fr);
+  margin-top: 100px;
 }
 
-.box2{
-  grid-column-start: 2;
-  grid-column-end: 3;
+.two-boxes-box{
+    height: 300px;
+}
+
+.three-boxes{
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 20px;
 }
 
 .three-boxes-box{
-  grid-template-columns: repeat(3, 1fr);
   height: 120px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.box3{
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.box4{
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.box5{
-  grid-column-start: 3;
-  grid-column-end: 4;
 }
 
 footer{
@@ -72,6 +56,7 @@ footer{
   display: grid;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 
 .little-box{
@@ -81,23 +66,9 @@ footer{
 
 @media (max-width: 500px){
 
-  .two-boxes-box, .three-boxes-box{
+  .two-boxes, .three-boxes{
     display: grid;
-    grid-gap: 20px;
-    grid-template-columns: minmax(100px, 1fr);
-  }
-
-  #box1, .box2, .box3, .box4, .box5{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    margin-bottom: 0px;
-  }
-
-  #box1{
-    margin-top: 100px;
+    grid-template-columns: 1fr;
   }
 
   footer{
